# redis_robot_comm

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  README_ger.md  cliff.toml  coverage_report.txt  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: codeql.yml  dependency-review.yml  docs.yml  lint.yml  security.yml  tests.yml  versioning.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/broker/: index.html
dev/api/labels/: index.html
dev/api/streamer/: index.html
dev/api/text_overlay/: index.html
dev/architecture/: index.html
dev/architecture/data_flow/: index.html
dev/changelog/: index.html
dev/configuration/: index.html
dev/development/contributing/: index.html
dev/en/: index.html
dev/en/changelog/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
docs/: ARCHITECTURE.md  INSTALL.md  MIGRATION.md  README.md  TESTING.md  api.md  text_overlay_readme.md
docs/de/: configuration.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/diagrams/: workflow_detector.mmd  workflow_streamer.mmd
docs/en/: configuration.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/tex/: workflow_detector_tikz.tex  workflow_streamer_tikz.tex
examples/advanced/: error_recovery.py  multi_consumer.py
examples/basic/: 01_comprehensive_example.py  02_publish_objects.py  03_stream_images.py  04_manage_labels.py
redis_robot_comm/: __init__.py  config.py  exceptions.py  protocols.py  redis_client.py  redis_image_streamer.py  redis_label_manager.py  redis_text_overlay.py  types.py  utils.py  validators.py
scripts/: camera_recorder_audio.py  increment_version.py  record_camera_script.py  record_camera_with_overlays.py  visualize_annotated_frames.py
scripts/recording/: camera_recorder_audio.py  record_camera_with_overlays.py  video_recorder_base.py
scripts/visualization/: visualize_annotated_frames.py
tests/: conftest.py  test_redis_label_manager.py  test_redis_robot_comm.py  test_redis_robot_comm_extended.py  test_redis_text_overlay.py
tests/integration/: test_integration_redis.py
tests/performance/: test_throughput.py
(+45 files in other folders)
