[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redis_robot_comm"
version = "0.1.0"
description = "Redis-based communication package for robot object detection and image streaming"
authors = [
    { name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "redis>=4.0.0",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0"
]

[project.urls]
Homepage = "https://github.com/dgaida/redis_robot_comm"
Repository = "https://github.com/dgaida/redis_robot_comm"

[tool.setuptools]
packages = ["redis_robot_comm"]

[tool.setuptools.package-data]
redis_robot_comm = ["py.typed"]

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^test_"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
generate-badge = "docs/assets/images"
badge-format = "svg"
